Further improve styling

--- a/Korki/Pages/Shared/_Layout.cshtml
+++ b/Korki/Pages/Shared/_Layout.cshtml
@@ -27,7 +27,7 @@
     <footer>
         <div class="footer_element">
             &copy; 2021 - Dominik Kreiser |
-            <a class="link_on_bright" asp-area="" asp-page="/Privacy">Privacy</a>
+            <a class="link_on_bright" asp-area="" asp-page="/Privacy">Polityka prywatności</a>
         </div>
     </footer>
 
