--- a/Korki/Pages/Shared/_LayoutHero.cshtml
+++ b/Korki/Pages/Shared/_LayoutHero.cshtml
@@ -24,7 +24,7 @@
     <footer class="footer_hero">
         <div class="footer_element">
             &copy; 2021 - Dominik Kreiser |
-            <a asp-area="" asp-page="/Privacy">Privacy</a>
+            <a asp-area="" asp-page="/Privacy">Polityka prywatności</a>
         </div>
     </footer>
 
