--- a/Korki/Pages/TutorOffer.cshtml
+++ b/Korki/Pages/TutorOffer.cshtml
@@ -43,6 +43,9 @@
             </div>
         </div>
         <div class="full_flex_row">
+            <h4>Tabela terminów:</h4>
+        </div>
+        <div class="full_flex_row">         
             <table class="tutor_timetable">
                 <tr>
                     @foreach (DateTime date in Model.Timetable.AvailableDates.Keys)
