--- a/Korki/wwwroot/css/search.css
+++ b/Korki/wwwroot/css/search.css
@@ -198,7 +198,7 @@
 
 .rating_circle {
     display: inline-block;
-    border-radius: 40%;
+    border-radius: 7px;
     width: 20px;
     height: 20px;
     margin: 0 1px;
