--- a/Korki/wwwroot/css/site.css
+++ b/Korki/wwwroot/css/site.css
@@ -10,6 +10,9 @@ for details on configuring this project to bundle and minify static web assets. 
     --color-prim-a: #55558B;
     --color-prim-b: #456096;
     --color-prim-a-muted: #b6b6d3;
+    --color-prim-a-transp: rgba(85, 85, 139, 0.7);
+    --color-prim-b-transp: rgba(69, 96, 150, 0.7);
+    --color-prim-betweent-transp: rgba(77, 91, 145, 0.75);
     /*--color-accent-a: #F4632A;
     --color-accent-b: #41EAD4;*/
     --color-bcg-base: #F3EFF5;
@@ -24,13 +27,11 @@ for details on configuring this project to bundle and minify static web assets. 
     --color-accent-b: #72E37C;
     --color-accent-a-dark: #1ab0d0;
     --color-accent-b-dark: #5dc867;
-
     --color-accent-a-bright: #49dfff;
     --color-accent-b-bright: #a4ffac;
-
-    --color-glass-light:rgba(255, 255, 255, 0.02);
-    --color-glass-normal:rgba(255, 255, 255, 0.06);
-    --color-glass-strong:rgba(255, 255, 255, 0.07);
+    --color-glass-light: rgba(255, 255, 255, 0.04);
+    --color-glass-normal: rgba(255, 255, 255, 0.1);
+    --color-glass-strong: rgba(255, 255, 255, 0.14);
 }
 
 
@@ -79,7 +80,8 @@ h1 {
     width: 100%;
     text-align: center;
     font-size: 64px;
-    font-weight:bold;
+    font-weight: bold;
+    text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.5);
 }
 
 h2 {
@@ -101,6 +103,7 @@ h5 {
     font-size: 16px;
     font-weight: normal;
     margin-top:0;
+    text-shadow:0px 0px 3px rgba(0, 0, 0, 0.4);
 }
 
 /* Header and nav stuff*/
